--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "phpmyadmin/phpmyadmin": "*"
+        "phpmyadmin/phpmyadmin": "*",
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -27,7 +28,10 @@
             "App\\Constants\\": "app/Constants/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/JwtHelpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
