--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     # dockerfile: Dockerfile
     volumes:
-      - ./app:/var/www/html
+      - ./:/var/www/html
     ports:
       - 9000:80
   
